# instance-web

./: vercel.json
.github/workflows/: frontend-ci-cd.yml
insighta-web/: .env  .gitignore  README.md  pyproject.toml  requirements.txt
insighta-web/api/: index.py
insighta-web/app/: client.py  config.py  dependencies.py  main.py
insighta-web/static/css/: style.css
insighta-web/templates/: account.html  base.html  dashboard.html  error.html  login.html  profile_detail.html  profiles.html  search.html
