[project]
name = "insighta-web"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn",
  "jinja2",
  "python-dotenv",
  "httpx",
  "python-multipart"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["api*", "static*", "templates*"]

[tool.uvicorn]
factory = false
